fixed the white space for the info page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -619,3 +619,7 @@ h1 {
   background: cyan;
 }
 
+.Black-ground {
+  padding: 0; /* Set padding to 0 */
+}
+
